MODON MRE BPDEV/force-app/main/default/objects/ADHA_Undertaking__mdt/ADHA_Undertaking__mdt.object-meta.xml
<CustomObject>
    <description>Undertaking text by service type and language. Which version a customer accepted is recorded on the reservation.</description>
    <label>ADHA Undertaking</label>
    <pluralLabel>ADHA Undertakings</pluralLabel>
</CustomObject>