MODON MRE BPDEV/force-app/main/default/objects/ADHA_Undertaking__mdt/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Full undertaking text as shown to the customer.</description>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>