MODON MRE BPDEV/force-app/main/default/objects/ADHA_Undertaking__mdt/fields/Clause_Count__c.field-meta.xml
<CustomField>
    <fullName>Clause_Count__c</fullName>
    <description>Grant has 4, Loan has 5.</description>
    <label>Clause Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>