MODON MRE BPDEV/force-app/main/default/objects/ADHA_Undertaking__mdt/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>en or ar.</description>
    <label>Language</label>
    <length>5</length>
    <type>Text</type>
</CustomField>