MODON MRE BPDEV/force-app/main/default/objects/ADHA_Undertaking__mdt/fields/Undertaking_Type__c.field-meta.xml
<CustomField>
    <fullName>Undertaking_Type__c</fullName>
    <description>Grant or Loan.</description>
    <label>Undertaking Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>