MODON MRE BPDEV/force-app/main/default/objects/ADHA_Undertaking__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Recorded on the reservation as evidence of what was accepted.</description>
    <label>Version</label>
    <length>30</length>
    <type>Text</type>
</CustomField>